notebook: add comments.

--- a/notebooks/fetch_blocks_mode_chain.ipynb
+++ b/notebooks/fetch_blocks_mode_chain.ipynb
@@ -137,11 +137,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get Daily Blocks"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Read the file is the data is not in memory\n",
     "blocks = pd.read_parquet('../data/mode_chain_blocks.parquet')"
    ]
   },
