refactor: rename file.

--- a/notebooks/fetch_blocks_mode_chain.ipynb
+++ b/notebooks/fetch_blocks_mode_chain.ipynb
@@ -150,7 +150,7 @@
    "outputs": [],
    "source": [
     "# Read the file is the data is not in memory\n",
-    "blocks = pd.read_parquet('../data/mode_chain_blocks.parquet')"
+    "blocks = pd.read_parquet('../data/mode_chain_all_blocks.parquet')"
    ]
   },
   {
